--- a/v3-prospr/protein_predictor.ipynb
+++ b/v3-prospr/protein_predictor.ipynb
@@ -20,11 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_a3m_path = \"/data/data/\"\n",
-    "output_pkl_path = \"/data/data/\"\n",
+    "data_path = \"/predictor/data\"\n",
     "\n",
     "prospr_path = \"/prospr\"\n",
-    "pdb_conv_path = \"/alphafoldv1\" \n",
     "\n",
     "dbug = True"
    ]
@@ -72,8 +70,8 @@
     }
    ],
    "source": [
-    "input_a3m_file = input_a3m_path + seq_name + '/input/' + seq_name + '.a3m'\n",
-    "output_pkl_file = output_pkl_path + seq_name + '/output/'+seq_name + '.pkl'\n",
+    "input_a3m_file = input_a3m_path + seq_name + '/' + seq_name + '.a3m'\n",
+    "output_pkl_file = output_pkl_path + seq_name + '/'+seq_name + '.pkl'\n",
     "if dbug == True:\n",
     "    print(input_a3m_file)\n",
     "    print(output_pkl_file)"
@@ -113,7 +111,10 @@
     }
    ],
    "source": [
-    "%run /prospr/prospr.py {input_a3m_file} -o {output_pkl_file}"
+    "%%bash -s \"$seq_name\" \"$data_path\" \"$prospr_path\"\n",
+    "\n",
+    "cd $3\n",
+    "run prospr.py ..$2/$1/$1.a3m"
    ]
   },
   {
